# BfbanCommonRobot

./: README.md  main.py  pyproject.toml  requirements.txt
apps/bfban/: implement.py  interface.py  report_step.py  svg.py
apps/bfban/models/: __init__.py
configs/: __init__.py  config.json  models.py
modules/: bfban_report.py
